remove old java ext dir